# InsightEDA-

./: CMakeLists.txt  notes.md
.github/workflows/: ci.yml
src/: main.cpp  src.h
src/InsightEDA/: logic.h
tests/: CMakeLists.txt  first_test.cpp
